<resources>
    <string name="app_name">Lab 08 - Game of Life</string>
    <string name="appname">GameOfLife</string>
    <string name="devname">Орлов Роман</string>
    <string name="nametxt">Name</string>
    <string name="widthtxt">Width</string>
    <string name="heighttxt">Height</string>
    <string name="oktxt">Ok</string>
    <string name="canceltxt">Cancel</string>
    <string name="field_name">Name: </string>
    <string name="field_play">Play</string>
    <string name="field_stop">Stop</string>
    <string name="field_delete">Delete</string>
    <string name="field_save">Save</string>
    <string name="field_exit">Exit</string>
    <string name="info_created">Created:</string>
    <string name="info_modified">Modified:</string>
    <string name="info_basemap">Base_map name:</string>
</resources>