<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    tools:context=".AddWindow">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/nameTextview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nametxt"
            android:fontFamily="@font/comic_neue"
            android:textSize="24sp"
            android:textStyle="bold"/>

        <Space
            android:layout_width="15dp"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/nameEditText"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="@font/comic_neue"
            android:inputType="text"
            android:text="Test"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/widthTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/widthtxt"
            android:fontFamily="@font/comic_neue"
            android:textSize="24sp"
            android:textStyle="bold"/>

        <Space
            android:layout_width="15dp"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/widthEditText"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="@font/comic_neue"
            android:inputType="text"
            android:text="20"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/heightTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/heighttxt"
            android:fontFamily="@font/comic_neue"
            android:textSize="24sp"
            android:textStyle="bold"/>

        <Space
            android:layout_width="5dp"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/heightEditText"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="@font/comic_neue"
            android:inputType="text"
            android:text="20"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="15dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:text="@string/canceltxt" />

        <Button
            android:id="@+id/buttonOK"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:text="@string/oktxt" />
    </LinearLayout>

</LinearLayout>